--- a/MyFirstWebApp/Views/Home/Diagrams.cshtml
+++ b/MyFirstWebApp/Views/Home/Diagrams.cshtml
@@ -5,7 +5,9 @@
 <script>
     let model = @Json.Serialize(Model);
 </script>
+<script src="~/lib/Chart.js/chart.js" asp-append-version="true"></script>
 <script src="~/js/Diagrams.js" asp-append-version="true"></script>
+
 
 }
 
