--- a/MyFirstWebApp/Views/Cashiers/Create.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyFirstWebApp.Models.CreateCashierViewModel
+﻿@model MyFirstWebApp.Models.CashierViewModel
 
 @{
     ViewData["Title"] = "Create";
