--- a/MyFirstWebApp/Views/Cashiers/PartialDetails.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/PartialDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyFirstWebApp.Models.Cashier
+﻿@model MyFirstWebApp.Models.CashierViewModel
  
 <div class="modal-content">
     <div class="modal-header">
