--- a/MyFirstWebApp/Views/Shared/_Layout.cshtml
+++ b/MyFirstWebApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cashiers" asp-action="Index">Кассиры</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Пользователи</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Diagrams">Диаграммы</a>
                         </li>
                     </ul>
