--- a/MyFirstWebApp/Views/Cashiers/Index.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/Index.cshtml
@@ -13,8 +13,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Кассиры магазина @Context.Request.RouteValues["id"]</h1>
 
+<form asp-action="Logout" asp-controller="Account" asp-anti-forgery="true">
+    <div>
+    <input type="submit" value="Выход" />
+    </div>
+</form>
+
+<h1>Кассиры магазина @Context.Request.RouteValues["id"]</h1>
 
 <p>
     <a asp-action="Create" asp-route-shopModelId="@Context.Request.RouteValues["id"]">Create New</a>
