--- a/MyFirstWebApp/Views/Account/Register.cshtml
+++ b/MyFirstWebApp/Views/Account/Register.cshtml
@@ -1,5 +1,21 @@
 ﻿@model MyFirstWebApp.Models.RegisterModel
  
+
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HelloView</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/hello.css" />
+</head>
+
+ <body class="log-body">
 <h2>Регистрация</h2>
  
 <form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
@@ -20,8 +36,11 @@
             <input asp-for="ConfirmPassword" />
             <span asp-validation-for="ConfirmPassword" />
         </div>
+        <input name="Roles" value="@Model." type="hidden">
         <div>
             <input type="submit" value="Регистрация" />
         </div>
     </div>
 </form>
+</body>
+</html>
