--- a/MyFirstWebApp/Views/Account/Register.cshtml
+++ b/MyFirstWebApp/Views/Account/Register.cshtml
@@ -11,8 +11,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HelloView</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/hello.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/hello.css" asp-append-version="true"/>
 </head>
 
  <body class="log-body">
