--- a/MyFirstWebApp/Views/Cashiers/Edit.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/Edit.cshtml
@@ -30,6 +30,16 @@
                 <span asp-validation-for="ShopModelId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="User.Email" class="control-label"></label>
+                <input asp-for="User.Email" class="form-control" />
+                <span asp-validation-for="User.Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="User.Password" class="control-label"></label>
+                <input asp-for="User.Password" class="form-control" />
+                <span asp-validation-for="User.Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
