--- a/MyFirstWebApp/wwwroot/css/hello.css
+++ b/MyFirstWebApp/wwwroot/css/hello.css
@@ -3,12 +3,17 @@
     margin-top: 50px;
 }
 
-
 .circle {
-   margin: 100px auto;
-
-   
-    
+    margin: auto;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    width: 1200px;
+    background-color: gray;
+    border-radius :75%;
 }
 
 .hello {
@@ -16,9 +21,12 @@
     justify-content: center;
     font-size: 1250%;
     color: white;
-}
-   
 
+}
+
+    .hello:hover {
+    color: #2EE59D;
+    }
 
 .btn-log {
     text-decoration: none;
@@ -40,9 +48,10 @@
     transition: .3s;
 }
 
-    .btn-log:hover {
-        background: #2EE59D;
-        box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
-        color: white;
-        transform: translateY(-7px);
-    }
+.btn-log:hover {
+    text-decoration: none;
+    background: #2EE59D;
+    box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+    color: white;
+    transform: translateY(-7px);
+}
