--- a/MyFirstWebApp/Views/Account/Login.cshtml
+++ b/MyFirstWebApp/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
     <div>
         <div class="form-group">
             <label asp-for="Email">Введите Email</label>
-            <input type="text" asp-for="Email" />
+            <input type="email" autocomplete="off" asp-for="Email" />
             <span asp-validation-for="Email" />
         </div>
         <div class="form-group">
