--- a/MyFirstWebApp/Views/Home/AddShops.cshtml
+++ b/MyFirstWebApp/Views/Home/AddShops.cshtml
@@ -5,36 +5,36 @@
 <script>
     let model = @Json.Serialize(Model);
 </script>
+<script src="~/lib/jquery/dist/jquery.js" asp-append-version="true"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.js" asp-append-version="true"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
 <script src="~/js/addShops.js" asp-append-version="true"></script>
-
 
 }
 
 @{
     ViewData["Title"] = "AddShops";
 }
+
+
 <h2>@ViewData["Title"]</h2>
-@using (Html.BeginForm("AddShops", "Home", FormMethod.Post))
+@using (Html.BeginForm("AddShops", "Home", FormMethod.Post, new{ @class="validate"}))
 {
-   
-    <p>
+     <p>
         <label>Название магазина</label><br />
-        @Html.TextBox("ShopName")
-        <span for="ShopName" class="text-danger"></span>
+        @Html.TextBox("ShopName", null, null , new{required="required"} )
     </p>
 
     <p>
         <label>Скидка в магазине</label><br />
-        @Html.TextBox("Sale", "", new{ type = "number"})
-        <span for="Sale" class="text-danger"></span>
+        @Html.TextBox("Sale", null, null , new{required="required"} )
     </p>
      <p>
         <label>Доход магазина</label><br />
-        @Html.TextBox("ShopIncome", "", new{ type = "number"})
-        <span for="ShopIncome" class="text-danger"></span>
+        @Html.TextBox("ShopIncome", null, null , new{required="required"})
     </p>
     <p>
-        <button type="button" id="reset" onclick="onClick()">Отправить</button>
+        <button type="button" id="reset"  onclick="onClick()">Отправить</button>
     </p>
 
 }
