--- a/MyFirstWebApp/Views/Cashiers/Index.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/Index.cshtml
@@ -28,16 +28,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.CashierName)
+                @Html.DisplayNameFor(model => model.Cashier.CashierName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Age)
+                @Html.DisplayNameFor(model => model.Cashier.Age)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ShopModelId) 
+                @Html.DisplayNameFor(model => model.Cashier.ShopModelId) 
             </th>
              <th>
-                @Html.DisplayNameFor(model => model.UserId) 
+                @Html.DisplayNameFor(model => model.Cashier.UserId) 
             </th>
             <th></th>
         </tr>
