--- a/MyFirstWebApp/Views/Cashiers/PartialDetails.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/PartialDetails.cshtml
@@ -9,13 +9,13 @@
     <div class="modal-body">
         <dl class="dl-horizontal">
             <dt>Имя кассира:</dt>
-            <dd>@Html.DisplayFor(model => model.CashierName)</dd>
+            <dd>@Html.DisplayFor(model => model.Cashier.CashierName)</dd>
  
             <dt>Возраст:</dt>
-            <dd>@Html.DisplayFor(model => model.Age)</dd>
+            <dd>@Html.DisplayFor(model => model.Cashier.Age)</dd>
  
             <dt>Магазин:</dt>
-            <dd>@Html.DisplayFor(model => model.ShopModelId)</dd>
+            <dd>@Html.DisplayFor(model => model.Cashier.ShopModelId)</dd>
         </dl>
     </div>
 </div>
