--- a/MyFirstWebApp/Views/Cashiers/Create.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/Create.cshtml
@@ -13,33 +13,33 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CashierName" class="control-label"></label>
-                <input asp-for="CashierName" class="form-control" />
-                <span asp-validation-for="CashierName" class="text-danger"></span>
+                <label asp-for="Cashier.CashierName" class="control-label"></label>
+                <input asp-for="Cashier.CashierName" class="form-control" />
+                <span asp-validation-for="Cashier.CashierName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
-                <input asp-for="Age" class="form-control" />
-                <span asp-validation-for="Age" class="text-danger"></span>
+                <label asp-for="Cashier.Age" class="control-label"></label>
+                <input asp-for="Cashier.Age" class="form-control" />
+                <span asp-validation-for="Cashier.Age" class="text-danger"></span>
             </div>
 
            
             <div>
-            <label asp-for="User"></label>
-            <select asp-for="UserId" asp-items="Model.Users"></select>
-            <span asp-validation-for="UserId" class="text-danger"></span>
+            <label asp-for="Cashier.User"></label>
+            <select asp-for="Cashier.UserId" asp-items="Model.Users"></select>
+            <span asp-validation-for="Cashier.UserId" class="text-danger"></span>
                 </div>
-            @if(Model.ShopModelId == 0)
+            @if(Model.Cashier.ShopModelId == 0)
             {
                 <div>
-            <label asp-for="ShopModelId"></label>
-            <select asp-for="ShopModelId" asp-items="Model.Shops"></select>
-            <span asp-validation-for="ShopModelId" class="text-danger"></span>
+            <label asp-for="Cashier.ShopModelId"></label>
+            <select asp-for="Cashier.ShopModelId" asp-items="Model.Shops"></select>
+            <span asp-validation-for="Cashier.ShopModelId" class="text-danger"></span>
                 </div>
             }
             else
             {
-                <input name="ShopmodelId" value="@Model.ShopModelId" type="hidden">
+                <input name="Cashier.ShopModelId" value="@Model.Cashier.ShopModelId" type="hidden">
             }
                
             <div class="form-group">
