--- a/MyFirstWebApp/Views/Cashiers/Delete.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/Delete.cshtml
@@ -12,21 +12,21 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CashierName)
+            @Html.DisplayNameFor(model => model.Cashier.CashierName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CashierName)
+            @Html.DisplayFor(model => model.Cashier.CashierName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
+            @Html.DisplayNameFor(model => model.Cashier.Age)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Age)
+            @Html.DisplayFor(model => model.Cashier.Age)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="CashierId" />
+        <input type="hidden" asp-for="Cashier.CashierId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
