--- a/MyFirstWebApp/Views/Cashiers/Details.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/Details.cshtml
@@ -11,20 +11,20 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CashierName)
+            @Html.DisplayNameFor(model => model.Cashier.CashierName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CashierName)
+            @Html.DisplayFor(model => model.Cashier.CashierName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
+            @Html.DisplayNameFor(model => model.Cashier.Age)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Age)
+            @Html.DisplayFor(model => model.Cashier.Age)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CashierId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Cashier.CashierId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
