--- a/MyFirstWebApp/Views/Cashiers/Edit.cshtml
+++ b/MyFirstWebApp/Views/Cashiers/Edit.cshtml
@@ -12,32 +12,32 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CashierId" />
+            <input type="hidden" asp-for="Cashier.CashierId" />
             
             <div class="form-group">
-                <label asp-for="CashierName" class="control-label"></label>
-                <input asp-for="CashierName" class="form-control" />
-                <span asp-validation-for="CashierName" class="text-danger"></span>
+                <label asp-for="Cashier.CashierName" class="control-label"></label>
+                <input asp-for="Cashier.CashierName" class="form-control" />
+                <span asp-validation-for="Cashier.CashierName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
-                <input asp-for="Age" class="form-control" />
-                <span asp-validation-for="Age" class="text-danger"></span>
+                <label asp-for="Cashier.Age" class="control-label"></label>
+                <input asp-for="Cashier.Age" class="form-control" />
+                <span asp-validation-for="Cashier.Age" class="text-danger"></span>
             </div>
              <div class="form-group">
-                <label asp-for="ShopModelId" class="control-label"></label>
-                <input asp-for="ShopModelId" class="form-control" />
-                <span asp-validation-for="ShopModelId" class="text-danger"></span>
+                <label asp-for="Cashier.ShopModelId" class="control-label"></label>
+                <input asp-for="Cashier.ShopModelId" class="form-control" />
+                <span asp-validation-for="Cashier.ShopModelId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Email" class="control-label"></label>
-                <input asp-for="User.Email" class="form-control" />
-                <span asp-validation-for="User.Email" class="text-danger"></span>
+                <label asp-for="Cashier.User.Email" class="control-label"></label>
+                <input asp-for="Cashier.User.Email" class="form-control" />
+                <span asp-validation-for="Cashier.User.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Password" class="control-label"></label>
-                <input asp-for="User.Password" class="form-control" />
-                <span asp-validation-for="User.Password" class="text-danger"></span>
+                <label asp-for="Cashier.User.Password" class="control-label"></label>
+                <input asp-for="Cashier.User.Password" class="form-control" />
+                <span asp-validation-for="Cashier.User.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
